<resources>
    <string name="app_name">PhotoGallery</string>
    <string name="main_title">Photo Gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="view_gallery">View Gallery</string>
    <string name="gallery_title">My Photos</string>
    <string name="select_folder">Choose Folder</string>
    <string name="current_folder">Current folder: %1$s</string>
    <string name="no_folder_selected">No folder selected</string>
    <string name="image_details">Image Details</string>
    <string name="image_name_label">Name</string>
    <string name="image_path_label">Location</string>
    <string name="image_size_label">Size</string>
    <string name="image_date_label">Taken on</string>
    <string name="delete_image">Delete Image</string>
    <string name="delete_confirmation">Are you sure you want to delete this image?</string>
    <string name="delete_confirmation_title">Delete Image</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="image_deleted">Image deleted successfully</string>
    <string name="back">Back</string>
    <string name="app_description">Capture and manage your photos</string>
    <string name="camera_permission_required">Camera permission is required to take photos</string>
    <string name="storage_permission_required">Storage permission is required to save and view photos</string>
</resources>